Added create and updated user APIs
