# server/api/controllers/users.js
@@ -6,7 +6,9 @@ let commonService = require('../../services/common');
 module.exports = {
   getUsersNoSql: getUsersNoSql,
 	getUsersSql: getUsersSql,
-	getUser: getUser
+	getUser: getUser,
+	updateUser: updateUser,
+	createUser: createUser
 };
 
 function getUsersNoSql(req, res, next) {
@@ -30,6 +32,23 @@ function getUser(req, res, next) {
   usersService.getUserAsync(userId)
     .then((result) => {
       res.json(commonService.resJson('User fetched successfully.', result));
+    })
+    .catch(next);
+}
+
+function updateUser(req, res, next) {
+	let userId = req.swagger.params.userId.value;
+  usersService.updateUserAsync(userId, req.body)
+    .then((result) => {
+      res.json(commonService.resJson('User updated successfully.', result));
+    })
+    .catch(next);
+}
+
+function createUser(req, res, next) {
+  usersService.createUserAsync(req.body)
+    .then((result) => {
+      res.json(commonService.resJson('User added successfully.', result));
     })
     .catch(next);
 }
